
#
SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/src/cmake ${CMAKE_MODULE_PATH})

# sources
SET( surfrecon_sources

# header files

# source files 
    ${PROJECT_SOURCE_DIR}/src/surfrecon.cpp
)

# gflags
FIND_PACKAGE( GFlags REQUIRED)
IF(GFLAGS_FOUND)
    SET(CMAKE_REQUIRED_LIBRARIES ${GFLAGS_LIBRARIES})
    INCLUDE_DIRECTORIES(${GFLAGS_INCLUDE_DIR})
ENDIF(GFLAGS_FOUND)

# CGAL
FIND_PACKAGE( CGAL REQUIRED)
IF(CGAL_FOUND)
    SET(CMAKE_REQUIRED_LIBRARIES ${CGAL_LIBRARIES})
    INCLUDE_DIRECTORIES(${CGAL_INCLUDE_DIR})
ENDIF(CGAL_FOUND)

#
SET(CMAKE_CXX_FLAGS "-std=c++11" CACHE STRING "Flags for CXX Compiler" FORCE)

#
ADD_EXECUTABLE(surfrecon ${surfrecon_sources})
TARGET_LINK_LIBRARIES(surfrecon ${CGAL_LIBRARIES} ${GFLAGS_LIBRARIES} ${BOOST_LIBRARIES} ${GMP_LIBRARIES} ${MPFR_LIBRARIES})

