
#
SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})

# sources
SET( surfrecon_sources

# header files

# source files 
    ${PROJECT_SOURCE_DIR}/src/surfrecon.cpp
)

# CGAL
FIND_PACKAGE( CGAL REQUIRED)
IF(CGAL_FOUND)
    SET(CMAKE_REQUIRED_LIBRARIES ${CGAL_LIBRARIES})
    INCLUDE_DIRECTORIES(${CGAL_INCLUDE_DIR})
ENDIF(CGAL_FOUND)

# OpenMP
FIND_PACKAGE( OpenMP REQUIRED)
IF(OPENMP_FOUND)
    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
ENDIF(OPENMP_FOUND)

#
SET(CMAKE_CXX_FLAGS "-std=c++11 -O3 -fopenmp -lm“ CACHE STRING "Flags for CXX Compiler" FORCE)

#
ADD_LIBRARY(surfrecon ${surfrecon_sources})
TARGET_LINK_LIBRARIES(surfrecon ${CGAL_LIBRARIES} ${GFLAGS_LIBRARIES} ${BOOST_LIBRARIES} ${GMP_LIBRARIES} ${MPFR_LIBRARIES})
SET(SurfRecon_LIBRARY surfrecon CACHE STRING "" FORCE)

ADD_DEPENDENCIES(surfrecon CGAL boost_thread boost_system boost_iostreams gmp mpfr)

