
#
SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})

# sources
SET( surfrecon_sources

# header files

# source files 
    ${PROJECT_SOURCE_DIR}/src/surfrecon.cpp
)

# CGAL
FIND_PACKAGE( CGAL REQUIRED)
IF(CGAL_FOUND)
    SET(CMAKE_REQUIRED_LIBRARIES ${CGAL_LIBRARIES})
    INCLUDE_DIRECTORIES(${CGAL_INCLUDE_DIR})
ENDIF(CGAL_FOUND)

#
IF(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
SET(CMAKE_CXX_FLAGS "-std=c++11 -O3 -lm -fopenmp" CACHE STRING "CXX Compiler Flags" FORCE)
ADD_DEFINITIONS(-DUse_OpenMP)
ENDIF()

IF(${CMAKE_SYSTEM_NAME} STREQUAL "Darwin")
SET(CMAKE_CXX_FLAGS "-std=c++11 -O3" CACHE STRING "CXX Compiler Flags" FORCE)
SET(CMAKE_MACOSX_RPATH 1)
ENDIF()

#
ADD_LIBRARY(surfrecon SHARED ${surfrecon_sources})
TARGET_LINK_LIBRARIES(surfrecon ${CGAL_LIBRARIES} ${BOOST_LIBRARIES} ${GMP_LIBRARIES} ${MPFR_LIBRARIES})
SET(SurfRecon_LIBRARY surfrecon CACHE STRING "" FORCE)
